<resources>
    <string name="app_name">Lab_2</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="activity2">Activity2</string>
    <string name="activity3">Activity3</string>
    <string name="activity4">Activity4</string>
    <string name="Exit">Выход</string>
    <string name="bottom">Bottom</string>
    <string name="center_right">Center_right</string>
    <string name="center_left">Center_left</string>
    <string name="center">Center</string>
    <string name="right_50">Right 50%</string>
    <string name="left_50">Left 50%</string>
    <string name="button7">Button7</string>
    <string name="button6">Button6</string>
    <string name="button5">Button5</string>
    <string name="button4">Button4</string>
    <string name="new_button">New Button</string>
</resources>