<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:padding="16dp">

    <View
        android:id="@+id/centerLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnLeft50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/centerLine"
        android:layout_marginEnd="4dp"
        android:text="@string/left_50" />

    <Button
        android:id="@+id/btnRight50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/centerLine"
        android:layout_marginStart="4dp"
        android:text="@string/right_50" />




    <Button
        android:id="@+id/btnCenter"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:maxLines="1"
        android:text="@string/center" />

    <Button
        android:id="@+id/btnCenterLeft"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/btnCenter"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:text="@string/center_left" />

    <Button
        android:id="@+id/btnCenterRight"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/btnCenter"
        android:layout_marginStart="8dp"
        android:maxLines="1"
        android:text="@string/center_right" />





    <Button
        android:id="@+id/btnBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/bottom" />

</RelativeLayout>