<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gBtn1Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gGap1Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29"

        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gBtn2Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.49"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gGap2Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.51" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gBtn3Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.71" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gGap3Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gBtn4Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.125" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.875" />


    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/activity2"
        android:onClick="openActivity2"
        app:layout_constraintStart_toStartOf="@id/gStart"
        app:layout_constraintEnd_toEndOf="@id/gEnd"
        app:layout_constraintTop_toTopOf="@id/gTop"
        app:layout_constraintBottom_toTopOf="@id/gBtn1Bottom" />


    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/activity3"
        android:onClick="openActivity3"
        app:layout_constraintStart_toStartOf="@id/gStart"
        app:layout_constraintEnd_toEndOf="@id/gEnd"
        app:layout_constraintTop_toTopOf="@id/gGap1Bottom"
        app:layout_constraintBottom_toTopOf="@id/gBtn2Bottom" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/activity4"
        android:onClick="openActivity4"
        app:layout_constraintStart_toStartOf="@id/gStart"
        app:layout_constraintEnd_toEndOf="@id/gEnd"
        app:layout_constraintTop_toTopOf="@id/gGap2Bottom"
        app:layout_constraintBottom_toTopOf="@id/gBtn3Bottom" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Exit"
        android:onClick="closeApp"
        app:layout_constraintStart_toStartOf="@id/gStart"
        app:layout_constraintEnd_toEndOf="@id/gEnd"
        app:layout_constraintTop_toTopOf="@id/gGap3Bottom"
        app:layout_constraintBottom_toTopOf="@id/gBtn4Bottom" />

</androidx.constraintlayout.widget.ConstraintLayout>